<resources>
    <string name="app_name">BookShareApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_share_application">Book Share App</string>
    <string name="book_share_app">Book Share App</string>
    <string name="bookshare">BookShare</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ? </string>
    <string name="login">Login</string>
    <string name="forget_password2">Forget Password ?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="create_new_account">Create New Account</string>
    <string name="v">V 1.0</string>
    <string name="start">Start</string>
    <string name="fetchdata">FetchData</string>
    <string name="signin">signin</string>
    <string name="create_add_a_post">Create / add a post</string>
    <string name="write_a_description">Write a Description</string>
    <string name="write_a_location">Write a Location</string>
    <string name="write_a_title">Write a Title</string>
    <string name="make_a_post">make a post</string>
    <string name="already_have_a_account">Already Have a Account</string>
</resources>