<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".BlinkFragment"
        android:background="@color/background_color">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/book_logo2">

        </ImageView>

        <TextView
            android:layout_marginTop="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/bookshare"
            android:layout_gravity="center"
            android:textSize="50dp"

            android:textColor="@color/app_name_color"
            android:gravity="center">
        </TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/home_feed_action"
            android:layout_gravity="center">

        </Button>
<TextView
    android:id="@+id/addBookAction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textStyle="italic"
    android:text="@string/create_add_a_post">

</TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_feed_action2"
            android:text="@string/signin"
            android:layout_gravity="center"
            android:textColor="@color/app_name_color"
            android:textStyle="italic"
            android:textSize="15dp"/>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v"
            android:gravity="center"
            android:layout_gravity="center">
        </TextView>
    </LinearLayout>
</layout>