<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/background_color"
        tools:context=".AddBookFragment">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/uploadlogo">

            </ImageView>

        </LinearLayout>


        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/CardView.Dark"
                android:text="@string/make_a_post">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titleET"
                android:gravity="center"
                android:hint="@string/write_a_title">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionET"
                android:gravity="center"
                android:hint="@string/write_a_description">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/locationET"
                android:gravity="center"
                android:hint="@string/write_a_location">

            </EditText>
            <Button
                android:id="@+id/saveBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:layout_gravity="center">

            </Button>
        </LinearLayout>

    </LinearLayout>
</layout>