<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="700dp"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:background="@drawable/book_logo2">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookshare"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:textSize="36dp"
            android:gravity="center"
            android:textColor="@color/app_name_color">

        </TextView>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="Enter Your Name"
            android:gravity="center"
            android:layout_gravity="center">
        </EditText>
        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:inputType="textEmailAddress"
            android:hint="@string/email_id"
            android:gravity="center"
            android:layout_gravity="center">
        </EditText>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:layout_gravity="center">

        </EditText>


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="250dp"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:layout_gravity="center"
            android:textColor="@color/background_color"
            android:text="Registration" />
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:background="@color/background_color"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alreadyHaveAccount"
                android:text="@string/already_have_a_account"
                android:textStyle="bold">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/loginBtn"
                android:text="Login"
                android:layout_toEndOf="@+id/alreadyHaveAccount"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>